2004-06-23  Edd Dumbill <edd@usefulinc.com>

	* libgsm/phonemgr-listener.cc (on_phone_message): convert message
	to utf-8 from iso-8859-1.
	* libgsm/phonemgr-listener.cc (phonemgr_listener_queue_message): 
	convert outgoing message from utf-8 to iso-8859-1.
	* configure.in: added the openobex check, as we need to link
	with that, and removed obsolete orbit check.
	* src/icon.c: add timeout to flash message icon, single-click
	on icon dequeues a message
	* src/ui.c: add popup_messages pref to control whether popup
	dialogs appear or not.  make dequeue_messages() open a new window
	for each message.
	* configure.in: bump version to 0.4
	* ui/phonemgr.glade: add "Interface" tab to prefs.
	* src/ui.c (apply_prefs, populate_prefs): wire up new
	prefs to UI
	* ui/alert.wav: sound file for audible alert
	* src/ui.c (play_alert): add method to play bell if enabled
	* src/connection.c: ifdef out testing code.
	* Makefile.am: install wav file
	* ui/phonemgr.glade: remove dummy content from widgets so
	translators don't translate it. apply some polish.
	* src/icon.c: detect whether Notification Area is running or
	not, and if not, put up a dialog telling the user how to
	add one.
	* Release 0.4.

2004-06-21  Edd Dumbill <edd@usefulinc.com>

	* ui/phonemgr.glade: remove irritating single pixel border on
	textview in message send dialog. In message received dialog,
	change "OK" to "Close".

2004-06-20  Edd Dumbill <edd@usefulinc.com>

	* libgsm/gsm.cc: connect() empty send queue on connection to
	avoid repeated sending of failing messages.  Increase timeout
	on serial port to 30 seconds from 5.
	* ui/phonemgr.glade: some HIGgification of dialogs.

2004-06-18  Edd Dumbill <edd@usefulinc.com>

	* libgsm/gsm.cc: delete MeTa when disconnected.
	* src/*.c: partially working phonemgr app now.
	* src/connection.c: make connection and disconnection
	happen in a separate thread, so the GUI doesn't block while
	this happens.
	* src/connection.c: implement auto-reconnect feature.